--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -5,13 +5,14 @@
       <div class="greeting">
         こんにちは
         <%= link_to current_user.name , user_path(current_user.id), class: :greeting__link %>さん
+        <%= render partial: 'prototype', collection: @prototype %>
       </div>
+      <% else %>
     <%# // ログインしているときは上記を表示する %>
     <div class="card__wrapper">
       <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
       <%= render partial: 'prototype', collection: @prototype %>
     </div>
-    <% else %>
     <% end %>
   </div>
 </main>
