--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -8,11 +8,10 @@
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
       <% if user_signed_in? && current_user.id == @prototype.user_id %>
         <div class="prototype__manage">
-          <%= link_to "編集する", edit_prototype_path, class: :prototype__btn %>
-            <%= link_to "削除する", prototype_path(@prototype.id), method: :delete, class: :prototype__btn %>
+          <%= link_to "編集する", edit_prototype_path(@prototype.id), class: :prototype__btn %>
+          <%= link_to "削除する", prototype_path(@prototype.id), method: :delete, class: :prototype__btn %>
         </div>
       <% end %>
-      
       <%# // プロトタイプの投稿者とログインしているユーザーが同じであれば上記を表示する %>
       <div class="prototype__image">
         <%= image_tag @prototype.image %>
@@ -53,7 +52,7 @@
               <% @comments.each do |comment| %>
                <p>
                 <%= comment.text  %>
-                <%= link_to comment.user.name , user_path, class: :comment_user %>
+                <%= link_to comment.user.name , user_path(comment.user_id), class: :comment_user %>
                </p>
               <% end %> 
             </li>
